.k8s/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: booker-service
  namespace: booker
spec:
  type: ClusterIP
  selector:
    app: booker
  ports:
    - name: booker
      port: 80
      protocol: TCP
      targetPort: 8080
